fix row overflow

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,19 +6,14 @@
 body {
     width: 100%; 
     background:linear-gradient(black, rgb(36, 36, 36));
-}
-
-* {
-    margin: 0;
-    padding: 0; 
-}
+}s
 /* wide scope */
 h2 {
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.fluid-container {
-    overflow-x: hidden;
+.row {
+margin-right: 0px !important;
 }
 /* hero */
 .jumbotron {
